erreurs
runtime.c: In function ‘efi_compat_get_info’:
/home/irit/xen-4.7.0/xen/include/asm/x86_64/uaccess.h:56:37: error: ‘*’ in boolean context, suggest ‘&&’ instead [-Werror=int-in-bool-context]
      compat_access_ok(addr, (count) * (size)))
                                     ^
/home/irit/xen-4.7.0/xen/include/asm/x86_64/uaccess.h:46:22: note: in definition of macro ‘__compat_addr_ok’
     ((unsigned long)(addr) < HYPERVISOR_COMPAT_VIRT_START(d))
                      ^~~~
/home/irit/xen-4.7.0/xen/include/asm/x86_64/uaccess.h:52:5: note: in expansion of macro ‘__compat_access_ok’
     __compat_access_ok(current->domain, addr, size)
     ^~~~~~~~~~~~~~~~~~
/home/irit/xen-4.7.0/xen/include/asm/x86_64/uaccess.h:56:6: note: in expansion of macro ‘compat_access_ok’
      compat_access_ok(addr, (count) * (size)))
      ^~~~~~~~~~~~~~~~
/home/irit/xen-4.7.0/xen/include/xen/compat.h:95:5: note: in expansion of macro ‘compat_array_access_ok’
     compat_array_access_ok((void *)(full_ptr_t)(hnd).c, (nr),        \
     ^~~~~~~~~~~~~~~~~~~~~~
compat.c:19:27: note: in expansion of macro ‘compat_handle_okay’
 #define guest_handle_okay compat_handle_okay
                           ^~~~~~~~~~~~~~~~~~
runtime.c:199:15: note: in expansion of macro ‘guest_handle_okay’
         if ( !guest_handle_okay(guest_handle_cast(info->vendor.name,
               ^~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
make[5]: *** [compat.o] Erreur 1
make[5]: *** Attente des tâches non terminées....
make[4]: *** [/home/irit/xen-4.7.0/xen/arch/x86/efi/built_in.o] Erreur 2
make[4]: *** Attente des tâches non terminées....
In file included from /home/irit/xen-4.7.0/xen/include/xen/config.h:13:0,
                 from <command-line>:0:
compat/grant_table.c: In function ‘compat_grant_table_op’:
/home/irit/xen-4.7.0/xen/include/asm/x86_64/uaccess.h:56:37: error: ‘*’ in boolean context, suggest ‘&&’ instead [-Werror=int-in-bool-context]
      compat_access_ok(addr, (count) * (size)))
                                     ^
/home/irit/xen-4.7.0/xen/include/xen/compiler.h:11:43: note: in definition of macro ‘unlikely’
 #define unlikely(x)   __builtin_expect(!!(x),0)
                                           ^
/home/irit/xen-4.7.0/xen/include/asm/x86_64/uaccess.h:49:5: note: in expansion of macro ‘__compat_addr_ok’
     __compat_addr_ok(d, (unsigned long)(addr) + ((size) ? (size) - 1 : 0))
     ^~~~~~~~~~~~~~~~
/home/irit/xen-4.7.0/xen/include/asm/x86_64/uaccess.h:52:5: note: in expansion of macro ‘__compat_access_ok’
     __compat_access_ok(current->domain, addr, size)
     ^~~~~~~~~~~~~~~~~~
/home/irit/xen-4.7.0/xen/include/asm/x86_64/uaccess.h:56:6: note: in expansion of macro ‘compat_access_ok’
      compat_access_ok(addr, (count) * (size)))
      ^~~~~~~~~~~~~~~~
/home/irit/xen-4.7.0/xen/include/xen/compat.h:95:5: note: in expansion of macro ‘compat_array_access_ok’
     compat_array_access_ok((void *)(full_ptr_t)(hnd).c, (nr),        \
     ^~~~~~~~~~~~~~~~~~~~~~
compat/grant_table.c:153:33: note: in expansion of macro ‘compat_handle_okay’
             else if ( unlikely(!compat_handle_okay(cmp.setup.frame_list, cmp.setup.nr_frames)) )
                                 ^~~~~~~~~~~~~~~~~~
/home/irit/xen-4.7.0/xen/include/asm/x86_64/uaccess.h:56:37: error: ‘*’ in boolean context, suggest ‘&&’ instead [-Werror=int-in-bool-context]
      compat_access_ok(addr, (count) * (size)))
                                     ^
/home/irit/xen-4.7.0/xen/include/xen/compiler.h:11:43: note: in definition of macro ‘unlikely’
 #define unlikely(x)   __builtin_expect(!!(x),0)
                                           ^
/home/irit/xen-4.7.0/xen/include/asm/x86_64/uaccess.h:49:5: note: in expansion of macro ‘__compat_addr_ok’
     __compat_addr_ok(d, (unsigned long)(addr) + ((size) ? (size) - 1 : 0))
     ^~~~~~~~~~~~~~~~
/home/irit/xen-4.7.0/xen/include/asm/x86_64/uaccess.h:52:5: note: in expansion of macro ‘__compat_access_ok’
     __compat_access_ok(current->domain, addr, size)
     ^~~~~~~~~~~~~~~~~~
/home/irit/xen-4.7.0/xen/include/asm/x86_64/uaccess.h:56:6: note: in expansion of macro ‘compat_access_ok’
      compat_access_ok(addr, (count) * (size)))
      ^~~~~~~~~~~~~~~~
/home/irit/xen-4.7.0/xen/include/xen/compat.h:95:5: note: in expansion of macro ‘compat_array_access_ok’
     compat_array_access_ok((void *)(full_ptr_t)(hnd).c, (nr),        \
     ^~~~~~~~~~~~~~~~~~~~~~
compat/grant_table.c:291:28: note: in expansion of macro ‘compat_handle_okay’
                           !compat_handle_okay(cmp.get_status.frame_list,
                            ^~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
make[5]: *** [grant_table.o] Erreur 1
make[5]: *** Attente des tâches non terminées....
make[4]: *** [/home/irit/xen-4.7.0/xen/common/built_in.o] Erreur 2
In file included from /home/irit/xen-4.7.0/xen/include/asm/uaccess.h:12:0,
                 from /home/irit/xen-4.7.0/xen/include/asm/mm.h:10,
                 from /home/irit/xen-4.7.0/xen/include/xen/mm.h:198,
                 from /home/irit/xen-4.7.0/xen/include/asm/domain.h:5,
                 from /home/irit/xen-4.7.0/xen/include/xen/domain.h:6,
                 from /home/irit/xen-4.7.0/xen/include/xen/sched.h:11,
                 from traps.c:29:
traps.c: In function ‘emulate_gate_op’:
traps.c:3347:66: error: ‘*’ in boolean context, suggest ‘&&’ instead [-Werror=int-in-bool-context]
             if ( !compat_access_ok(stkp - 4 - nparm, (4 + nparm) * 4) )
/home/irit/xen-4.7.0/xen/include/asm/x86_64/uaccess.h:46:22: note: in definition of macro ‘__compat_addr_ok’
     ((unsigned long)(addr) < HYPERVISOR_COMPAT_VIRT_START(d))
                      ^~~~
/home/irit/xen-4.7.0/xen/include/asm/x86_64/uaccess.h:52:5: note: in expansion of macro ‘__compat_access_ok’
     __compat_access_ok(current->domain, addr, size)
     ^~~~~~~~~~~~~~~~~~
traps.c:3347:19: note: in expansion of macro ‘compat_access_ok’
             if ( !compat_access_ok(stkp - 4 - nparm, (4 + nparm) * 4) )
                   ^~~~~~~~~~~~~~~~
traps.c:3366:61: error: ‘*’ in boolean context, suggest ‘&&’ instead [-Werror=int-in-bool-context]
                 if ( !compat_access_ok(ustkp - nparm, nparm * 4) )
/home/irit/xen-4.7.0/xen/include/asm/x86_64/uaccess.h:46:22: note: in definition of macro ‘__compat_addr_ok’
     ((unsigned long)(addr) < HYPERVISOR_COMPAT_VIRT_START(d))
                      ^~~~
/home/irit/xen-4.7.0/xen/include/asm/x86_64/uaccess.h:52:5: note: in expansion of macro ‘__compat_access_ok’
     __compat_access_ok(current->domain, addr, size)
     ^~~~~~~~~~~~~~~~~~
traps.c:3366:23: note: in expansion of macro ‘compat_access_ok’
                 if ( !compat_access_ok(ustkp - nparm, nparm * 4) )

